--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -81,9 +81,9 @@ h1 {
   margin-bottom: 1.45rem;
   color: inherit;
   font-family: "Quicksand", sans-serif;
-  font-weight: bold;
+  font-weight: 500;
   text-rendering: optimizeLegibility;
-  font-size: 2.25rem;
+  font-size: 1.5rem;
   line-height: 1.1;
 }
 mark {
