--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -391,6 +391,11 @@ p {
   padding-right: 0;
   padding-top: 0;
   margin-bottom: 1.45rem;
+  letter-spacing: 0.1rem;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 100;
+  line-height: 30px;
 }
 pre {
   margin-left: 0;
