--- a/src/components/layout/layout.css
+++ b/src/components/layout/layout.css
@@ -17,6 +17,7 @@ body {
   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
   font-feature-settings: "kern", "liga", "clig", "calt";
+  color: #ffffff;
 }
 article,
 aside,
